--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - "389:389"
     volumes:
       - ./ldap/Seguridad/:/ldap/Seguridad/
+      - ./ldap/Base-datos/:/var/lib/ldap/
+      - ./ldap/config:/etc/ldap/slapd.d/
     networks:
       red_gestion:
         ipv4_address: 192.168.10.2
